--- a/index.html
+++ b/index.html
@@ -1,1 +1,79 @@
-<!-- remove this comment and place your html here -->
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Personality Quiz</title>
+		<link type='text/css' rel='stylesheet' href='style.css'/>
+		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open Sans"/>
+	</head>
+	<body>
+		<header>
+
+		 </header>
+
+		 <main> 
+			<div id= "quiz-wrapper"> 
+
+			<div class="question">
+				<h2> What word best describes your personality?</h2>
+				<input type="radio" name="personality" id="outgoing">
+				<label for="choice-id">outgoing</label>
+				<input type="radio" name="personality" id="abrasive">
+				<label for="choice-id">abrasive</label>
+				<input type="radio" name="personality" id="shy">
+				<label for="choice-id">shy</label>
+				<input type="radio" name="personality" id="pushy">
+				<label for="choice-id">pushy</label>
+			 </div>
+			<div class="question"> 
+				<h2>What would be an ideal Friday night Jam for you?</h2>
+				<input type="radio" name="song" id="California Love">
+				<label for="choice-id">California Love</label> 
+				<input type="radio" name="song" id="Gin and Juice">
+				<label for="choice-id">Gin and Juice</lable> 
+				<input type="radio" name="song" id="One More Chance">
+				<label for="Choice-id">One More Chance</label> 
+				<input type="radio" name="song" id="Push it">
+				<label for="choice-id">Push it</label> 
+			</div>
+			<div class="question">
+				<h2>What would be reason you got fired form tour job?</h2>
+				<input type="radio" name="Job" id="Stealing Boxes">
+				<label for="choice-id">Stealing Boxes</label> 
+				<input type="radio" name="Job" id= "Harassment"> 
+				<label for="choice-id">Harassment</label> 
+				<input type="radio" name="Job" id="being late"> 
+				<label for="Choice-id">being late</label> 
+				<input type="radio" name="Job" id="poor preformance"> 
+				<label for="choice-id">poor preformance</label>
+			 </div>
+			<div class="question"><h2>What slang Word form the 90's would you most likely use?</h2>
+				<input type="radio" name="Slang" id="Buggin">
+				<label for="Choice-id">Buggin</label>
+				<input type="radio" name="Slang" id="My Bad">
+				<label for="choice-id">My bad</label> 
+			</div>
+			<div class="question"> </div>
+			
+			</div>
+
+		 </main>
+
+
+
+
+
+		<!-- <div id='container'>
+			<div id='title'>
+				<h1>Which Friday Character are You!</h1>
+			</div>
+   			<br/>
+  			<div id='quiz'></div>
+    		<div class='button' id='next'><a href='#'>Next</a></div>
+    		<div class='button' id='prev'><a href='#'>Prev</a></div>
+    		<div class='button' id='start'><a href='#'>Start Over</a></div>
+    		
+    	</div> -->
+		<script type="text/javascript" src='questions.json'></script>
+		<script type='text/javascript' src='script.js'></script>
+	</body>
+</html>
